<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <Button
        android:id="@+id/btn_exoplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        android:text="@string/exoplayer"/>

    <Button
        android:id="@+id/btn_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_exoplayer"
        android:textAllCaps="false"
        android:text="@string/viewpager2"/>

    <Button
        android:id="@+id/btn_dataBinding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_videos"
        android:text="@string/data_binding"/>

    <Button
        android:id="@+id/btn_dagger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_dataBinding"
        android:text="@string/dagger"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_dagger"
        android:text="@string/register"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="material"
        app:cornerRadius="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:strokeWidth="10dp"
        app:icon="@drawable/exo_icon_vr"
        app:strokeColor="@color/colorPrimary"
        android:theme="@style/Theme.MaterialComponents.Light"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/btn_material"/>

</androidx.constraintlayout.widget.ConstraintLayout>